# w4dj

./: .config.toml  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  doctor.rs  dump.rs  gui.rs  main.py  main.rs  metadata.rs  sync.rs
