[package]
name = "w4dj"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
ncmdump = "0.8.0"
indicatif = "0.17.11"
rayon = "1.10.0"
text-to-ascii-art = "0.1.10"
which = "8.0.0"
